# follow-the-mean

./: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml
rgm/: README.md  pyproject.toml  run.sh
rgm/experiments/: ablation_betas.yaml  ablation_dataset_size.yaml  ablation_nfe.yaml  ablation_prompt_reference_pink_elephant.yaml  ablation_reference_composition.yaml  animal_savanna_giraffe.yaml  animal_savanna_zebra.yaml  blue_elephant.yaml  cat_studio.yaml  cat_van_gogh.yaml  gymnast_ring_leap.yaml  hand_horns.yaml  house_forest_cinematic.yaml  house_forest_sketch.yaml  keyhole.yaml  pink_elephant.yaml
rgm/scripts/: run_experiment.py
rgm/src/: ablate_reference_size.py  ablate_sampling_steps.py  evaluate_prompt_reference_clip.py  evaluate_savanna_clip_sweep.py  evaluate_savanna_object_vlm.py  experiment_config.py  experiment_runtime.py  parser.py  plot_bank_size_ablation.py  plot_beta_schedule_reference.py  plot_savanna_ablation_metrics.py  retrieval_guidance_core.py  training_free_control.py
spfm/: README.md  eval_checkpoint.py  pyproject.toml  run_experiment.py  train.py
spfm/eval_tools/: fixed_seed_comparison.py  image_folder_metrics.py  lpips_metrics.py  nn_triplet.py  nn_triplet_steering.py
spfm/experiments/: baseline_dit.yaml  dit.yaml  model.yaml  spfm.yaml
spfm/models/: adaln.py  invae.py  pos_embed.py  time_embed.py
spfm/preprocessing/: encoders.py
spfm/scripts/: eval.sh  train.sh
spfm/trainer/: __init__.py  checkpoint.py  clip_eval.py  db.py  loss.py  model_factory.py  optim.py  sampling.py  targets.py
spfm/utils/: io.py  optim.py  (+1 more)
(+14 files in other folders)
